--- a/forsale.html
+++ b/forsale.html
@@ -287,7 +287,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('https://cdn.pixabay.com/photo/2016/11/29/05/44/woman-1867608_1280.jpg'); 
+    background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('./images.html/woman-1867608_1280.jpg'); 
     background-size: cover;
     background-position: center center;
     background-attachment: fixed; 
